# ai-automation-framework

./: .claudecode.md  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  config.json  config.py  copilot-instructions.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.claude/agents/: corrector.md  generator.md  reporter.md
.claude/commands/: loop.md  start.md
.cursor/: mcp.json
.cursor/rules/: ai-automation.mdc
.github/: copilot-instructions.md
cli/: __init__.py  commands.py
core/: __init__.py  api_base.py  base_page.py  driver_factory.py  memory_engine.py
locators/: __init__.py  cart_locators.py  checkout_locators.py  inventory_locators.py  login_locators.py  saucedemo_login_locators.py
mcp_server/: __init__.py  server.py  tools.py
pages/: __init__.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py  saucedemo_login_page.py
services/: __init__.py  api_response.py  api_service.py
stories/: checkout_user_story.json  login_user_story.json  saucedemo_checkout_story.json  saucedemo_login_story.json  users_api_story.json
stories/templates/: api_story.json  web_app_story.json
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_saucedemo_availability.py  test_users.py
tests/unit/: conftest.py  test_auto_dom_mapper.py  test_base_page.py  test_cli_commands.py  test_code_generators.py  test_helpers_private.py  test_mcp_tools.py  test_memory_engine.py  test_nlp_story_parser.py  test_project_scaffolder.py  test_story_parser.py
utils/: __init__.py  helpers.py
(+5 files in other folders)
